progress update - almost done with the home page

--- a/frontend/client/src/components/NavBar.module.css
+++ b/frontend/client/src/components/NavBar.module.css
@@ -105,7 +105,8 @@
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: var(--primary);
+  color: white;
 }
 
 /* The .exercise-subheading styles */
