--- a/frontend/client/src/pages/Home.module.css
+++ b/frontend/client/src/pages/Home.module.css
@@ -2,9 +2,9 @@
   border: 1px solid black;
   display: flex;
   flex-direction: row;
-  gap: 100px;
-  margin-left: 200px;
-  margin-right: 200px;
+  gap: 50px;
+  margin-left: 150px;
+  margin-right: 150px;
   margin-top: 40px;
   margin-bottom: 30px;
 }
@@ -46,6 +46,13 @@
   margin: 5px 0 5px 0;
   font-size: 0.9em;
   color: #555;
+}
+.no-workout-mssg {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  color: var(--primary);
 }
 /* .workout-details span {
   position: absolute;
