--- a/frontend/client/src/pages/Home.module.css
+++ b/frontend/client/src/pages/Home.module.css
@@ -1,5 +1,4 @@
 .homepage {
-  border: 1px solid black;
   display: flex;
   flex-direction: row;
   gap: 50px;
@@ -9,7 +8,6 @@
   margin-bottom: 30px;
 }
 .homepage-left-section, .homepage-right-section {
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
 }
@@ -20,48 +18,11 @@
   flex: 1;
   
 }
-/* .homepage-left-subsection {
-  border: 1px solid black;
-  flex: 3;
-}
-.homepage-right-subsection {
-  border: 1px solid black;
-  flex: 1;
-} */
-
-.workout-details {
-  background: #fff;
-  border-radius: 4px;
-  margin: 10px;
-  padding: 30px;
-  position: relative;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.05);
-}
-.workout-details h4 {
-  margin: 0 0 20px 0;
-  font-size: 1.2em;
-  color: var(--primary);
-}
-.workout-details p {
-  margin: 5px 0 5px 0;
-  font-size: 0.9em;
-  color: #555;
-}
 .no-workout-mssg {
   display: flex;
+  height: 300px;
   justify-content: center;
   align-items: center;
   font-size: 30px;
   color: var(--primary);
 }
-/* .workout-details span {
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  cursor: pointer;
-  background: #f1f1f1;
-  padding: 6px;
-  border-radius: 50%;
-  color: #333;
-} */
-
