--- a/frontend/client/src/components/Footer.module.css
+++ b/frontend/client/src/components/Footer.module.css
@@ -2,11 +2,12 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100px;
   background-color: black;
   text-align: center;
-  padding: 10px;
+  padding: 15px;
+  margin: 0px;
 }
 .footer-copyright {
   background-color: #1B1B1B;
