--- a/frontend/client/src/components/Footer.module.css
+++ b/frontend/client/src/components/Footer.module.css
@@ -2,16 +2,16 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100vw;
+  width: 1490px;
   height: 100px;
   background-color: black;
   text-align: center;
   padding: 15px;
   margin: 0px;
+  border: none;
 }
 .footer-copyright {
   background-color: #1B1B1B;
   color: #A9A9A9;
   margin: 0px;
-  /* working in progress */
 }
