--- a/frontend/client/src/components/NavBar.module.css
+++ b/frontend/client/src/components/NavBar.module.css
@@ -11,7 +11,7 @@
   align-items: center;
   flex-direction: row;
   gap: 20px;
-  width: 100vw;
+  width: calc(100vw - var(--scrollbar-width));
   margin: 0px;
 } 
 .title01, .title02 {
