--- a/frontend/client/src/components/WorkoutForm.module.css
+++ b/frontend/client/src/components/WorkoutForm.module.css
@@ -28,11 +28,20 @@ form button {
 form button:hover {
   background: var(--secondary);
 }
-div.error {
-  padding: 10px;
-  background: #ffefef;
-  border: 1px solid var(--error);
-  color: var(--error);
-  border-radius: 4px;
-  margin: 20px 0;
+.message-prompt, .error-prompt {
+  position: fixed; 
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  z-index: 1000; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px; 
+  background-color: rgba(0, 0, 0, 0.8); 
+  color: white; 
+  border-radius: 8px; 
+  font-size: 18px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); 
+  overflow: visible; 
 }
