--- a/frontend/client/src/workoutplans/WorkoutPlan.module.css
+++ b/frontend/client/src/workoutplans/WorkoutPlan.module.css
@@ -21,3 +21,63 @@
   font-size: 30px;
   color: var(--primary);
 }
+.delete-all-option {
+  font-family: 'Body-Font';
+  font-size: 15px;
+  width: 150px;
+  background: #dcdcdc; 
+  border: 2px solid #a9a9a9; 
+  color: #000; 
+  padding: 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 10px 0px 0px 50px;
+  
+}
+.delete-all-option:hover {
+  background: var(--error);
+  color: white;
+  border: none;
+}
+.message-prompt, .error-prompt, .confirmation-prompt {
+  position: fixed; 
+  top: 50%;
+  left: 50%; 
+  transform: translate(-50%, -50%); 
+  z-index: 1000; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px; 
+  background-color: rgba(0, 0, 0, 0.8); 
+  color: white; 
+  border-radius: 8px; 
+  font-size: 18px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2); 
+  overflow: visible; 
+}
+.confirmation-prompt {
+  display: flex;
+  flex-direction: column;
+}
+.confirmation-prompt button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  color: #fff;
+  background-color: var(--primary);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.confirmation-prompt button:hover {
+  background-color: var(--error); 
+}
+.confirmation-prompt .cancel-delete-all {
+  background-color: #555; 
+}
+.confirmation-prompt .cancel-delete-all:hover {
+  background-color: #777; 
+}
+
